--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+    </head>
+    <body>
+        <h1>Hello Worl!</h1>
+        <h2>This is a plain text</h2>
+    </body>    
+</html>
