--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Hello World!</title>
+        <title>Hola mi Amor(Juanita)!</title>
     </head>
     <body>
-        <h1>Hello Worl!</h1>
-        <h2>This is a plain text</h2>
+        <h1>Hola BBsita estamos en linea!</h1>
+        <h2>ya tenemos donde poner las pagina y acomodarlas (juanita)</h2>
+        <h2>Te amo</h2>
     </body>    
 </html>
